--- a/.classpath
+++ b/.classpath
@@ -3,5 +3,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="/home/zombivoro/eclipse/xmlUnit/xmlunit-core-2.5.1.jar">
+		<attributes>
+			<attribute name="javadoc_location" value="jar:file:/home/zombivoro/eclipse/xmlUnit/xmlunit-core-2.5.1-javadoc.jar!/"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
